@@ -104,3 +104,4 @@
 11-Jun-2021  - V1.13 Add StashableBase() module
 14-Jun-2021  - V1.14 Add remotePrefix support to backup/restore methods in StashableBase()
 19-Jul-2021  - V1.15 Add GitUtil() module and associated tests, add git support in StashableBase()
+27-Jul-2021  - V1.16 Adjust stash and git logging verbosity
